<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Registration">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/registration_text"
        android:text="@string/title_label_text"/>

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_edit_text" />

    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/content_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_label_text" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/content_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/content_edit_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_back" />

        <Button
            android:id="@+id/update_btn_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_update" />


    </LinearLayout>

</LinearLayout>